Adding CGMManagerUI protocol

--- a/LoopKitUI/es.lproj/Localizable.strings
+++ b/LoopKitUI/es.lproj/Localizable.strings
@@ -1,6 +1,9 @@
 /* Title of the carb entry absorption time cell */
 "Absorption Time" = "Tiempo de Absorción";
 
+/* The title of the button to add the credentials for a service */
+"Add Account" = "Agregar Cuenta";
+
 /* Action sheet confirmation message for pump history deletion */
 "Are you sure you want to delete all history entries?" = "¿Estás seguro de querer eliminar todos las entradas históricas?";
 
@@ -39,6 +42,9 @@
 
 /* Title of the carb entry date picker cell */
 "Date" = "Fecha";
+
+/* The title of the button to remove the credentials for a service */
+"Delete Account" = "Eliminar Cuenta";
 
 /* Button title to delete all objects */
 "Delete All" = "Eliminar Todos";
@@ -88,6 +94,9 @@
 /* Format string for combining localized numeric value and unit without spacing. (1: numeric value)(2: unit) */
 "quantity-and-unit-tight" = "%1$@%2$@";
 
+/* The default placeholder string for a credential */
+"Required" = "Requerido";
+
 /* Section title for slow absorbing food */
 "Slow" = "Lento";
 
@@ -111,6 +120,9 @@
 
 /* The default title to use when an entry has none */
 "Unknown" = "Desconocido";
+
+/* Label indicating validation is occurring */
+"Verifying" = "Verificando";
 
 /* Title of an alert containing a validation warning */
 "Warning" = "Aviso";
