--- a/LoopKitUI/nb.lproj/Localizable.strings
+++ b/LoopKitUI/nb.lproj/Localizable.strings
@@ -1,6 +1,9 @@
 /* Title of the carb entry absorption time cell */
 "Absorption Time" = "Absorbsjonstid";
 
+/* The title of the button to add the credentials for a service */
+"Add Account" = "Legg Til Konto";
+
 /* Action sheet confirmation message for pump history deletion */
 "Are you sure you want to delete all history entries?" = "Er du sikker på at du vil slette alle historiske innslag?";
 
@@ -39,6 +42,9 @@
 
 /* Title of the carb entry date picker cell */
 "Date" = "Dato";
+
+/* The title of the button to remove the credentials for a service */
+"Delete Account" = "Slett Konto";
 
 /* Button title to delete all objects */
 "Delete All" = "Slett alle";
@@ -88,6 +94,9 @@
 /* Format string for combining localized numeric value and unit without spacing. (1: numeric value)(2: unit) */
 "quantity-and-unit-tight" = "%1$@%2$@";
 
+/* The default placeholder string for a credential */
+"Required" = "Påkrevd";
+
 /* Section title for slow absorbing food */
 "Slow" = "Langsom";
 
@@ -111,6 +120,9 @@
 
 /* The default title to use when an entry has none */
 "Unknown" = "Ukjent";
+
+/* Label indicating validation is occurring */
+"Verifying" = "Bekrefter";
 
 /* Title of an alert containing a validation warning */
 "Warning" = "Advarsel";
