--- a/LoopKitUI/ru.lproj/Localizable.strings
+++ b/LoopKitUI/ru.lproj/Localizable.strings
@@ -1,6 +1,9 @@
 /* Title of the carb entry absorption time cell */
 "Absorption Time" = "Длительность усвоения";
 
+/* The title of the button to add the credentials for a service */
+"Add Account" = "Добавить пользователя";
+
 /* Action sheet confirmation message for pump history deletion */
 "Are you sure you want to delete all history entries?" = "Подтвердите удаление всех записей истории?";
 
@@ -39,6 +42,9 @@
 
 /* Title of the carb entry date picker cell */
 "Date" = "Дата";
+
+/* The title of the button to remove the credentials for a service */
+"Delete Account" = "Удалить аккаунт";
 
 /* Button title to delete all objects */
 "Delete All" = "Стереть все";
@@ -88,6 +94,9 @@
 /* Format string for combining localized numeric value and unit without spacing. (1: numeric value)(2: unit) */
 "quantity-and-unit-tight" = "%1$@%2$@";
 
+/* The default placeholder string for a credential */
+"Required" = "обязательный";
+
 /* Section title for slow absorbing food */
 "Slow" = "Медленная";
 
@@ -111,6 +120,9 @@
 
 /* The default title to use when an entry has none */
 "Unknown" = "Неизвестно";
+
+/* Label indicating validation is occurring */
+"Verifying" = "Верифицируется";
 
 /* Title of an alert containing a validation warning */
 "Warning" = "Предостережение";
