--- a/LoopKitUI/Base.lproj/Localizable.strings
+++ b/LoopKitUI/Base.lproj/Localizable.strings
@@ -10,6 +10,12 @@
 /* Action sheet confirmation message for reservoir deletion */
 "Are you sure you want to delete all reservoir values?" = "Are you sure you want to delete all reservoir values?";
 
+/* The title of the button to add the credentials for a service */
+"authentication-button-add" = "Add Account";
+
+/* The title of the button to remove the credentials for a service */
+"authentication-button-delete" = "Delete Account";
+
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Cancel";
 
@@ -102,6 +108,9 @@
 
 /* The empty-state text for a configuration value */
 "Tap to set" = "Tap to set";
+
+/* The default placeholder string for a credential */
+"text-placeholder-required" = "Required";
 
 /* Alert body displayed absorption time greater than max (1: maximum absorption time) */
 "The maximum absorption time is %@" = "The maximum absorption time is %@";
