--- a/LoopKitUI/de.lproj/Localizable.strings
+++ b/LoopKitUI/de.lproj/Localizable.strings
@@ -10,6 +10,12 @@
 /* Action sheet confirmation message for reservoir deletion */
 "Are you sure you want to delete all reservoir values?" = "Möchtest du wirklich alle Reservoir Werte löschen?";
 
+/* The title of the button to add the credentials for a service */
+"authentication-button-add" = "Konto hinzufügen";
+
+/* The title of the button to remove the credentials for a service */
+"authentication-button-delete" = "Konto löschen";
+
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Abbrechen";
 
@@ -102,6 +108,9 @@
 
 /* The empty-state text for a configuration value */
 "Tap to set" = "Klicken zum setzten";
+
+/* The default placeholder string for a credential */
+"text-placeholder-required" = "Erforderlich";
 
 /* Alert body displayed absorption time greater than max (1: maximum absorption time) */
 "The maximum absorption time is %@" = "Die maximale absorption time ist %@";
