--- a/LoopKitUI/es.lproj/Localizable.strings
+++ b/LoopKitUI/es.lproj/Localizable.strings
@@ -10,6 +10,12 @@
 /* Action sheet confirmation message for reservoir deletion */
 "Are you sure you want to delete all reservoir values?" = "¿Estás seguro de querer eliminar todos los datos del reservorio?";
 
+/* The title of the button to add the credentials for a service */
+"authentication-button-add" = "Agregar Cuenta";
+
+/* The title of the button to remove the credentials for a service */
+"authentication-button-delete" = "Eliminar Cuenta";
+
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Cancelar";
 
@@ -102,6 +108,9 @@
 
 /* The empty-state text for a configuration value */
 "Tap to set" = "Toca para definir";
+
+/* The default placeholder string for a credential */
+"text-placeholder-required" = "Requerido";
 
 /* Alert body displayed absorption time greater than max (1: maximum absorption time) */
 "The maximum absorption time is %@" = "El tiempo máximo de absorción es %@";
