--- a/LoopKitUI/fr.lproj/Localizable.strings
+++ b/LoopKitUI/fr.lproj/Localizable.strings
@@ -1,14 +1,18 @@
 /* Title of the carb entry absorption time cell */
 "Absorption Time" = "Durée d’absorption";
 
-/* The title of the button to add the credentials for a service */
-"Add Account" = "Ajouter un compte";
 
 /* Action sheet confirmation message for pump history deletion */
 "Are you sure you want to delete all history entries?" = "Êtes-vous sûr de vouloir supprimer toutes les entrées d’historique?";
 
 /* Action sheet confirmation message for reservoir deletion */
 "Are you sure you want to delete all reservoir values?" = "Êtes-vous sûr de vouloir supprimer toutes les valeurs de réservoir?";
+
+/* The title of the button to add the credentials for a service */
+"authentication-button-add" = "Ajouter un compte";
+
+/* The title of the button to remove the credentials for a service */
+"authentication-button-delete" = "Supprimer le compte";
 
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Annuler";
@@ -42,9 +46,6 @@
 
 /* Title of the carb entry date picker cell */
 "Date" = "Date";
-
-/* The title of the button to remove the credentials for a service */
-"Delete Account" = "Supprimer le compte";
 
 /* Button title to delete all objects */
 "Delete All" = "Supprimer tout";
@@ -94,14 +95,14 @@
 /* Format string for combining localized numeric value and unit without spacing. (1: numeric value)(2: unit) */
 "quantity-and-unit-tight" = "%1$@%2$@";
 
-/* The default placeholder string for a credential */
-"Required" = "Nécessaire";
-
 /* Section title for slow absorbing food */
 "Slow" = "Lent";
 
 /* The empty-state text for a configuration value */
 "Tap to set" = "Appuyez pour définir";
+
+/* The default placeholder string for a credential */
+"text-placeholder-required" = "Nécessaire";
 
 /* Alert body displayed absorption time greater than max (1: maximum absorption time) */
 "The maximum absorption time is %@" = "Le temps d'absorption maximum est de %@";
