--- a/LoopKitUI/it.lproj/Localizable.strings
+++ b/LoopKitUI/it.lproj/Localizable.strings
@@ -10,6 +10,12 @@
 /* Action sheet confirmation message for reservoir deletion */
 "Are you sure you want to delete all reservoir values?" = "Sei sicuro di voler eliminare tutti  i valori del serbato?";
 
+/* The title of the button to add the credentials for a service */
+"authentication-button-add" = "Aggiungi Account";
+
+/* The title of the button to remove the credentials for a service */
+"authentication-button-delete" = "Cancella Account";
+
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Cancella";
 
@@ -102,6 +108,9 @@
 
 /* The empty-state text for a configuration value */
 "Tap to set" = "Imposta";
+
+/* The default placeholder string for a credential */
+"text-placeholder-required" = "Necessario";
 
 /* Alert body displayed absorption time greater than max (1: maximum absorption time) */
 "The maximum absorption time is %@" = "Il tempo di assorbimento massimo e %@";
