--- a/LoopKitUI/nl.lproj/Localizable.strings
+++ b/LoopKitUI/nl.lproj/Localizable.strings
@@ -10,6 +10,12 @@
 /* Action sheet confirmation message for reservoir deletion */
 "Are you sure you want to delete all reservoir values?" = "Weet je zeker dat je alle waardes van het reservoir wilt verwijderen?";
 
+/* The title of the button to add the credentials for a service */
+"authentication-button-add" = "Voeg account toe";
+
+/* The title of the button to remove the credentials for a service */
+"authentication-button-delete" = "Verwijder account";
+
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Annuleer";
 
@@ -102,6 +108,9 @@
 
 /* The empty-state text for a configuration value */
 "Tap to set" = "Instellen…";
+
+/* The default placeholder string for a credential */
+"text-placeholder-required" = "Vereist";
 
 /* Alert body displayed absorption time greater than max (1: maximum absorption time) */
 "The maximum absorption time is %@" = "De maximum absorptietijd is %@";
