--- a/LoopKitUI/ru.lproj/Localizable.strings
+++ b/LoopKitUI/ru.lproj/Localizable.strings
@@ -1,14 +1,17 @@
 /* Title of the carb entry absorption time cell */
 "Absorption Time" = "Длительность усвоения";
 
-/* The title of the button to add the credentials for a service */
-"Add Account" = "Добавить пользователя";
-
 /* Action sheet confirmation message for pump history deletion */
 "Are you sure you want to delete all history entries?" = "Подтвердите удаление всех записей истории?";
 
 /* Action sheet confirmation message for reservoir deletion */
 "Are you sure you want to delete all reservoir values?" = "Подтвердите удаление всех записей резервуара?";
+
+/* The title of the button to add the credentials for a service */
+"authentication-button-add" = "Добавить пользователя";
+
+/* The title of the button to remove the credentials for a service */
+"authentication-button-delete" = "Удалить аккаунт";
 
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Отмена";
@@ -42,9 +45,6 @@
 
 /* Title of the carb entry date picker cell */
 "Date" = "Дата";
-
-/* The title of the button to remove the credentials for a service */
-"Delete Account" = "Удалить аккаунт";
 
 /* Button title to delete all objects */
 "Delete All" = "Стереть все";
@@ -94,14 +94,14 @@
 /* Format string for combining localized numeric value and unit without spacing. (1: numeric value)(2: unit) */
 "quantity-and-unit-tight" = "%1$@%2$@";
 
-/* The default placeholder string for a credential */
-"Required" = "обязательный";
-
 /* Section title for slow absorbing food */
 "Slow" = "Медленная";
 
 /* The empty-state text for a configuration value */
 "Tap to set" = "Щелкнуть для ввода";
+
+/* The default placeholder string for a credential */
+"text-placeholder-required" = "обязательный";
 
 /* Alert body displayed absorption time greater than max (1: maximum absorption time) */
 "The maximum absorption time is %@" = "Максимальная длительность усвоения %@";
