--- a/LoopKitUI/zh-Hans.lproj/Localizable.strings
+++ b/LoopKitUI/zh-Hans.lproj/Localizable.strings
@@ -10,6 +10,12 @@
 /* Action sheet confirmation message for reservoir deletion */
 "Are you sure you want to delete all reservoir values?" = "确定要删除所有的储药器数据吗？";
 
+/* The title of the button to add the credentials for a service */
+"authentication-button-add" = "添加账户";
+
+/* The title of the button to remove the credentials for a service */
+"authentication-button-delete" = "删除账户";
+
 /* The title of the cancel action in an action sheet */
 "Cancel" = "取消";
 
@@ -102,6 +108,9 @@
 
 /* The empty-state text for a configuration value */
 "Tap to set" = "点击设置";
+
+/* The default placeholder string for a credential */
+"text-placeholder-required" = "需要";
 
 /* Alert body displayed absorption time greater than max (1: maximum absorption time) */
 "The maximum absorption time is %@" = "最大吸收时间为  %@";
