--- a/LoopKitUI/es.lproj/Localizable.strings
+++ b/LoopKitUI/es.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "carb-entry-title-edit" = "Editar Entrada de Carb";
 
 /* Carb entry section footer text explaining absorption time */
-"Choose a longer absorption time for larger meals, or those containing fats and proteins. This is only guidance to the algorithm and need not be exact." = "Elija un tiempo de absorción más largo para comidas más grandes, o aquellas que contienen grasas y proteínas. Esta es solo una guía para el algoritmo y no necesita ser exacta.";
+"Optional Fat and protein entry will result in additional dosing over an extended duration for fat and protein calories, and will override manual entry of duration of absorption." = "La entrada opcional de grasas y proteínas dará como resultado una dosificación adicional durante un período prolongado de calorías de grasas y proteínas, y anulará la entrada manual de la duración de la absorción.";
 
 /* The format string describing the date of a COB value. The first format argument is the localized date. */
 "com.loudnate.CarbKit.COBDateLabel" = "a %1$@";
