--- a/LoopKitUI/nl.lproj/Localizable.strings
+++ b/LoopKitUI/nl.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "carb-entry-title-edit" = "Bewerk koolhydraten";
 
 /* Carb entry section footer text explaining absorption time */
-"Choose a longer absorption time for larger meals, or those containing fats and proteins. This is only guidance to the algorithm and need not be exact." = "Kies een langere opnametijd voor grotere maaltijden of voor degene die vetten en eiwitten bevatten. Dit is alleen een leidraad voor het algoritme en hoeft niet exact te zijn.";
+"Optional Fat and protein entry will result in additional dosing over an extended duration for fat and protein calories, and will override manual entry of duration of absorption." = "Optioneel invoeren van vet en proteïne zal resulteren in extra dosering gedurende langere tijd voor vet- en proteïnekalorieën, en zal handmatige invoer van duur van absorptie overschrijven.";
 
 /* The format string describing the date of a COB value. The first format argument is the localized date. */
 "com.loudnate.CarbKit.COBDateLabel" = "op %1$@";
