--- a/LoopKitUI/zh-Hans.lproj/Localizable.strings
+++ b/LoopKitUI/zh-Hans.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "carb-entry-title-edit" = "编辑碳水";
 
 /* Carb entry section footer text explaining absorption time */
-"Choose a longer absorption time for larger meals, or those containing fats and proteins. This is only guidance to the algorithm and need not be exact." = "如果吃大餐请选择比较长的吸收时间，或者是以脂肪和蛋白为主的食物。该设置仅为算法的一般原则，具体请根据自身情况调整";
+"Optional Fat and protein entry will result in additional dosing over an extended duration for fat and protein calories, and will override manual entry of duration of absorption." = "可选的脂肪和蛋白质进入将导致额外的剂量超过脂肪和蛋白质卡路里的持续时间，并将覆盖手动输入吸收持续时间。";
 
 /* The format string describing the date of a COB value. The first format argument is the localized date. */
 "com.loudnate.CarbKit.COBDateLabel" = "在 %1$@";
